# swe-jni-lib

./: .gitignore  CMakeLists.txt  README.md  swe2jni-dll.sln  swe2jni-dll.vcxproj  swe2jni-dll.vcxproj.filters
src/: swejni.c  swejni.h
